[TRUNK]  + Added examples/ex_monitorinfo.pas.  * Example ex_blend2 is now initialized in a different way.  * Fixed and added a lot of documentation.

--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,3 +1,5 @@
+ * Preparar "goals" y "milestones".
+
 In no special order
 
   * Check sizes of BOOLEAN types.  It seems to work (Xubuntu 14.04.4 & WinXP).
