[TRUNK]  + Added example ex_drawpixels.  * Example ex_warp_mouse renamed as ex_mouse_warp.  * Addon al5primitives and related example ex_prim revised.  They still don't    work as expected.  See TODO.  * Fixed al_get_display_mode and al_get_keyboard_state.  * Some documentation fixed and added.

--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -2,6 +2,10 @@
 
 In no special order
 
+  * ex_prim doesn't work as expected.  The last screen (TIndexedBuffers) 
+    affects it in a way that prevents hardware acceleration to work.  If it
+    isn't initialized (Create) everything works.
+
   * Check sizes of BOOLEAN types.  It seems to work (Xubuntu 14.04.4 & WinXP).
 
   * See the various TODO notes in unit Allegro5.pas.
