--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,6 +1,6 @@
- * Preparar "goals" y "milestones".
-
 In no special order
+
+  * Check AL_OFF_T data type.
 
   * Check how to detect GTK+ and do correct compilation in ex_menu.
     Also {$DEFINE} may be useful.  Problem is that I don't see "DEFINES"
