[TRUNK]  * Documentation revision, moving some descriptions to an external    file.  This should help when compiling Allegro.pas apps, as source    is smaller.

--- a/TRUNK/TODO
+++ b/TRUNK/TODO
@@ -1,3 +1,5 @@
+  Revise documentation.  Note that long descriptions are at file allegro.pds.
+
 In no special order
 
   * Check how to detect GTK+ and do correct compilation in ex_menu.
