[TRUNK]  * ex_audio_simple and ex_convert examples use ApplicationName function instead    of ParamStr and argv ones.  * Fixed a call to al_use_transform in ex_transform.    (What does "&" means though?)  * Documentation updates.

--- a/TRUNK/README
+++ b/TRUNK/README
@@ -60,7 +60,8 @@ Implemented
 
   + Event manager, including but not limited to keyboard, mouse, timer and
     display.
-  + OpenGL support (except extensions).
+  + OpenGL (except extensions) and DirectX.
+  + Shaders.
   + Software bitmaps.
   + Text drawing.
   + ttf fonts.
