Commit to sync with SoruceForge's SVN #372 + Added "data.pas" to Furious Paladin. + Use of Try-except for error handling in Furious Paladin. * Some small updates to examples/common.pas. + Added TTheme, TSaveState and TUstring classes to examples/nihgui.pas.  Not   used yet. * Allegro links to Monolith version on Windows by default.  Use NO_MONOLITH to   use separated DLL addons insteadA * Delphi and Free Pascal specific compiler configuration moved from   allegro5.cfg to dcc.cfg and fpc.cfg. + Added ALLEGRO_TAU constant. * Modified and fixed al_load_bitmap_f and al_load_bitmap_flags_f. * Documentation fixes and updates.

--- a/TRUNK/CHANGES
+++ b/TRUNK/CHANGES
@@ -1,3 +1,22 @@
+Changes between versions 5.2.beta and 5.2.b.1
+=============================================
+
+  News
+  ----
+  F16: Now Windows compiles for "monolith" by default.
+     : Added some new constants with version information.
+     : Added constant with TAU number (2PI).  Look for the Tau Manifesto for
+       more information.
+
+  API changes
+  -----------
+     : Parameter ident of al_load_bitmap_f is AL_STR now, wich is more
+       coherent with other procedures.
+     : Fixed parameter ident of al_load_bitmap_flags_f and
+       al_save_bitmap_flags_f behavior.
+
+
+
 Changes between versions 5.2.a3 and 5.2.beta
 ============================================
 
