Allegro 5.2.beta.1 Release.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,16 @@
-Ñuño Martínez <http://www.burdjia.com/>
+Guillermo "Ñuño" Martínez <http://www.burdjia.com/>
  - did everyghing that nobody else did.
 
 Elias (www.allegro.cc)
  - helped testing the Delphi version (5.0 alpha).
 
 Gregor A. Cieslak
- - did help a lot with Delphi compatibility.
+ - helped a lot with Delphi compatibility.
    You can get the original Cieslak's work from GitHub:
    https://github.com/Soldat/allegro-pas5-test
 
 Handoko (www.lazarus-ide.org)
  - did the simple demonstration game "Furious Paladin".
+
+Thanks to Pascal Game Develompent (https://www.pascalgamedevelopment.com/)
+community for the support and helping with Delphi compatibility.
