--- a/resources/windows.manifest/README
+++ b/resources/windows.manifest/README
@@ -1,4 +1,5 @@
  Here you have a Windows manifest file to be added to your executables.  Look
  at the examples and demonstration games to see how.
 
- Note that you should edit the XML file to set the name and description.
+ Note that you should edit the XML file to set the actual name and description
+ for your creation.  Do not change the version though.
