Synchronization with SourceForge's SVN #470 and 5.2.beta.1-1 Release:
* Fixes a bug with al_load_audio_stream_f declaration.
+ Added some new resources.
* A few updates in documentation.

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,4 +13,5 @@ Handoko (www.lazarus-ide.org)
  - did the simple demonstration game "Furious Paladin".
 
 Thanks to Pascal Game Develompent (https://www.pascalgamedevelopment.com/)
-community for the support and helping with Delphi compatibility.
+and Club Delphi (https://www.clubdelphi.com/) communityes for the support and
+helping with Delphi compatibility.
